--- a/electron/tsconfig-renderer.json
+++ b/electron/tsconfig-renderer.json
@@ -14,7 +14,9 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipDefaultLibCheck": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "jsx": "preserve",
+    "types": ["@types/node", "@types/webpack-env", "vue"]
   },
-  "include": ["chat.ts", "window.ts", "../**/*.d.ts"]
+  "include": ["./**/*.ts", "./**/*.vue"]
 }
