--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "main": "main.js",
   "devDependencies": {
     "@electron/remote": "^2.1.2",
-    "@f-list/fork-ts-checker-webpack-plugin": "^3.1.1",
     "@f-list/vue-ts": "^1.0.3",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@types/bluebird": "3.5.32",
@@ -19,6 +18,9 @@
     "@types/request-promise": "^4.1.51",
     "@types/sortablejs": "^1.15.8",
     "@types/vue-clickaway": "2.2.0",
+    "@types/webpack-env": "^1.18.8",
+    "@vue/compat": "^3.1.0",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/devtools": "^6.6.4",
     "any-ascii": "^0.3.2",
     "async": "^0.9.2",
@@ -36,6 +38,7 @@
     "electron-settings": "~4.0.4",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^4.1.0",
@@ -56,13 +59,12 @@
     "tslib": "^2.8.1",
     "tslint": "^6.1.3",
     "typescript": "^3.9.10",
-    "vue": "2.6.12",
+    "vue": "^3.1.0",
     "vue-clickaway": "2.2.2",
     "vue-input-tag": "^2.0.7",
     "vue-lazyload": "1.3.5",
-    "vue-loader": "15.9.8",
+    "vue-loader": "^16.0.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "2.6.12",
     "webpack": "^5.98.0"
   },
   "dependencies": {
@@ -82,7 +84,8 @@
     "electron-winstaller": "^5.4.0"
   },
   "resolutions": {
-    "vue": "2.6.12",
+    "vue": "^3.1.0",
+    "@vue/compat": "^3.1.0",
     "vue-class-component": "6.3.2",
     "vue-loader": "15.9.8",
     "vue-template-compiler": "2.6.12",
