--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "main": "main.js",
   "devDependencies": {
     "@electron/remote": "^2.1.2",
-    "@f-list/fork-ts-checker-webpack-plugin": "^3.1.1",
     "@f-list/vue-ts": "^1.0.3",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/bluebird": "3.5.32",
@@ -15,10 +14,12 @@
     "@types/lodash": "4.14.162",
     "@types/node": "16.18.32",
     "@types/node-fetch": "^2.6.12",
-    "@types/qs": "^6.9.18",
+    "@types/qs": "^6.14.0",
     "@types/request-promise": "^4.1.51",
     "@types/sortablejs": "^1.15.8",
     "@types/vue-clickaway": "2.2.0",
+    "@vue/compat": "^3.5.17",
+    "@vue/compiler-sfc": "^3.5.17",
     "@vue/devtools": "^6.6.4",
     "any-ascii": "^0.3.2",
     "async": "^0.9.2",
@@ -28,7 +29,7 @@
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^5.2.7",
     "date-fns": "2.29.3",
-    "electron": "^35.2.0",
+    "electron": "^35.5.1",
     "electron-builder": "^25.1.8",
     "electron-log": "^4.4.8",
     "electron-packager": "^15.5.2",
@@ -36,17 +37,18 @@
     "electron-settings": "~4.0.4",
     "extract-loader": "^5.1.0",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.1.0",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^4.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.8",
-    "prettier": "^3.5.2",
+    "prettier": "^3.5.3",
     "qs": "^6.14.0",
     "raven-js": "^3.27.2",
     "raw-loader": "^4.0.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "sass-embedded": "^1.85.1",
+    "sass-embedded": "^1.89.2",
     "sass-loader": "^16.0.5",
     "sortablejs": "^1.15.6",
     "style-loader": "^2.0.0",
@@ -56,14 +58,13 @@
     "tslib": "^2.8.1",
     "tslint": "^6.1.3",
     "typescript": "^3.9.10",
-    "vue": "2.6.12",
+    "vue": "^3.5.17",
     "vue-clickaway": "2.2.2",
     "vue-input-tag": "^2.0.7",
     "vue-lazyload": "1.3.5",
-    "vue-loader": "15.9.8",
+    "vue-loader": "^16.0.0",
     "vue-style-loader": "^4.1.3",
-    "vue-template-compiler": "2.6.12",
-    "webpack": "^5.98.0"
+    "webpack": "^5.99.9"
   },
   "dependencies": {
     "@cliqz/adblocker": "1.26.16",
@@ -73,7 +74,7 @@
     "@cliqz/adblocker-extended-selectors": "1.26.16",
     "husky": "^9.1.7",
     "jquery": "^3.7.1",
-    "lint-staged": "^15.4.3",
+    "lint-staged": "^15.5.2",
     "node-fetch": "^2.7.0"
   },
   "optionalDependencies": {
@@ -82,9 +83,7 @@
     "electron-winstaller": "^5.4.0"
   },
   "resolutions": {
-    "vue": "2.6.12",
     "vue-class-component": "6.3.2",
-    "vue-loader": "15.9.8",
     "vue-template-compiler": "2.6.12",
     "@types/bluebird": "3.5.32",
     "@types/har-format": "1.2.10",
