--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -4,6 +4,12 @@ apply plugin: 'kotlin-android'
 android {
     compileSdkVersion 29 // Updated to match build tools
     // buildToolsVersion is optional unless you need a specific version
+    
+    sourceSets {
+        main {
+            assets.srcDirs = ['src/main/assets', '../../www']
+        }
+    }
 
     defaultConfig {
         applicationId "net.f_list.fchat"
