--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -3,16 +3,20 @@ description: Suggest an idea or feature for Horizon
 labels: ['feature']
 projects: ['FChat-Horizon/Horizon']
 body:
-  - type: markdown
+  - type: textarea
     id: description
     attributes:
       label: Describe the problem
       description: A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
-  - type: markdown
+    validations:
+      required: true
+  - type: textarea
     id: solution
     attributes:
       label: Your idea/ solution
       description: What's your idea? How do you see it working?
+    validations:
+      required: true
   - type: textarea
     id: additional-context
     attributes:
