--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -4,11 +4,13 @@ labels: ['bug']
 projects: ['FChat-Horizon/Horizon']
 type: bug
 body:
-  - type: markdown
+  - type: textarea
     id: description
     attributes:
       label: Describe the bug
       description: Please provide a clear and concise description of what the bug is.
+    validations:
+      required: true
   - type: textarea
     id: version-info
     attributes:
@@ -16,12 +18,12 @@ body:
       placeholder: In the app menu, go to Horizon > About Horizon, click \"Copy Version Info\" and paste it here.
     validations:
       required: true
-  - type: markdown
+  - type: textarea
     id: reproduction-steps
     attributes:
       label: To reproduce
       description: Steps to reproduce the behavior. Remember, the more descriptive you are, the easier it is for us to fix the issue!
-      value: |
+      placeholder: |
         1. Go to '...'
         2. Click on '....'
         3. Scroll down to '....'
