--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -2,11 +2,13 @@ name: Question
 description: Ask a question about using Horizon.
 labels: ['help wanted']
 body:
-  - type: markdown
+  - type: textarea
     id: description
     attributes:
       label: Describe your question
       description: A clear and concise description of what the problem is. Ex. I'm trying to[...]
+    validations:
+      required: true
   - type: textarea
     id: version-info
     attributes:
