license: Update license across project

--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -34,7 +34,7 @@ jobs:
 
 
             **In short:** You keep ownership of your code, but you grant the
-            project lead the right to re-license contributions from GPLv3 to
+            project lead the right to license contributions under
             MPL-2.0 and to provide them to Dragonfruit under MIT.
 
 
