--- a/electron/package.json
+++ b/electron/package.json
@@ -5,7 +5,7 @@
   "description": "Horizon",
   "homepage": "https://horizn.moe",
   "main": "main.js",
-  "license": "MIT",
+  "license": "MPL-2.0",
   "build": {
     "appId": "net.flist.fchat",
     "productName": "Horizon",
