--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "The F-List Team and Horizon Contributors",
   "description": "A heavily modded FChat 3.0 client for F-List, continued from Rising",
   "private": true,
-  "license": "GPL-3.0-or-later",
+  "license": "MPL-2.0",
   "main": "main.js",
   "engines": {
     "node": ">=22.18.0"
